k8s/user/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: user-db-service
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user-db
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        network/user: "true"
        service: user-db
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: admin123
            - name: MONGO_INITDB_ROOT_USERNAME
              value: admin
          image: mongo
          name: microservices-user-db
          volumeMounts:
            - name: user-db-data
              mountPath: /data/db
          resources:
            requests:
              cpu: 200m
              memory: 512M
            limits:
              cpu: 500m
              memory: 1Gi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: user-db-data
          persistentVolumeClaim:
            claimName: user-db-claim
