k8s/user/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: user-service
  name: user
spec:
  replicas: 3
  selector:
    matchLabels:
      service: user
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/user: "true"
        service: user
    spec:
      containers:
        - image: krixlion/user-service:latest
          name: user
          ports:
            - containerPort: 50051
          # resources: 
          #   requests:
          #     memory: 100
          #     cpu: 100m
          #   limits:
          #     memory: 200
          #     cpu: 200mm
      restartPolicy: Always
