k8s/user/user-read-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  labels:
    service: user-read-db-service
  name: user-read-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-read-db
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: user-read-db
    spec:
      containers:
        - image: mongo
          name: user-read-db
          volumeMounts:
            - name: user-read-db-data
              mountPath: /data/db
          ports:
            - containerPort: 27017
          # resources:
            # requests:
            #   cpu: 200m
            #   memory: 512M
            # limits:
            #   cpu: 1000m
            #   memory: 3Gi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: user-read-db-data
          persistentVolumeClaim:
            claimName: user-read-db-claim
