k8s/user/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  clusterIP: None 
  selector:
    name: user-db
  ports:
      - port: 27017
