k8s/user/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    service: user
  ports:
      - port: 50051
