k8s/user/user-write-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: user-write-db-service
spec:
  clusterIP: None 
  selector:
    app: user-write-db
  ports:
      - port: 27017
